test/errors/type/str/ltrim3.yasl
mt.lookup('', .ltrim)(.str, true)
